<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    tools:context=".controller.signup.Signup">


...
        android:background="@drawable/serene_logo" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/join_us"
        android:textAlignment="center"
        android:textSize="20sp" />
...
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="@color/Grey"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="303dp"
        android:ems="10"
...
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#B1B0B0"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="253dp"
        android:ems="10"
...
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#B1B0B0"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/CpasswordInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="203dp"
        android:ems="10"
...
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#B1B0B0"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/off_button"
...
        android:textColor="@color/white"
        android:textSize="18sp"
        android:typeface="normal" />


    <TextView
        android:id="@+id/Error"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="253dp"
        android:padding="5dp"
...
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
...
