...
    <string name="EmptyEmail">Email Should not be Empty</string>
    <string name="NotCorrectEmail">Please, Enter Your Email Correctly.</string>
    <string name="NoUser">* There is not User With this Email, Please Try Again!</string>
    <string name="SocioNotFound">You Have First Complete The Registration Requirements Before Log in</string>

    <!-- Suign up Page -->
    <string name="NotValidName">* Enter valid name.</string>
    <string name="NotValidEmail">* Enter valid email.</string>
    <string name="NotMatchPass">* Password does not match.</string>
    <string name="ExistUser">* Email already used by another account.</string>
    <string name="PasswordShort">* Password must be at least 6 characters.</string>
    <string name="SignUpSuccess">Signed Up Success</string>
    <string name="SignUpFialed">* Sign in Failed, Please try again</string>

    <!-- Socio in Sign up Page -->
    <string name="NotValidAge">Please Enter Valid Age Value Between 5 to 110 Years Old</string>
    <string name="NotValidHeight">Please Enter Valid Height Value Between 50 to 300 CM</string>
    <string name="NotValidWeight">Please Enter Valid Weight Value Between 20 to 300 KG</string>
    <string name="NotValidMI">Please Enter Valid Monthly Income Value should be no more than 5000000</string>
...
